﻿+++++++++++
Python News
+++++++++++

What's New in Python 2.7.10?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- Issue #23048: Fix jumping out of an infinite while loop in the pdb.

Library
-------

- Issue #23098: 64-bit dev_t is now supported in the os module.

- Issue #23063: In the disutils' check command, fix parsing of reST with code or
  code-block directives.

- Issue #21356: Make ssl.RAND_egd() optional to support LibreSSL. The
  availability of the function is checked during the compilation. Patch written
  by Bernard Spil.

- Backport the context argument to ftplib.FTP_TLS.

- Issue #23111: Maximize compatibility in protocol versions of ftplib.FTP_TLS.

- Issue #23112: Fix SimpleHTTPServer to correctly carry the query string and
  fragment when it redirects to add a trailing slash.

- Issue #22585: On OpenBSD 5.6 and newer, os.urandom() now calls getentropy(),
  instead of reading /dev/urandom, to get pseudo-random bytes.

- Issue #23093: In the io, module allow more operations to work on detached
  streams.

- Issue #23071: Added missing names to codecs.__all__.  Patch by Martin Panter.

- Issue #23016: A warning no longer produces an AttributeError when sys.stderr
  is None.

- Issue #14099: ZipFile.open() no longer reopen the underlying file.  Objects
  returned by ZipFile.open() can now operate independently of the ZipFile even
  if the ZipFile was created by passing in a file-like object as the first
  argument to the constructor.

- Issue #21032. Fixed socket leak if HTTPConnection.getresponse() fails.
  Original patch by Martin Panter.

- Issue #22609: Constructors and update methods of mapping classes in the
  collections module now accept the self keyword argument.

Documentation
-------------

- Issue #23006: Improve the documentation and indexing of dict.__missing__.
  Add an entry in the language datamodel special methods section.