@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #23248: Update ssl error codes from latest OpenSSL git master.
+
 - Issue #23098: 64-bit dev_t is now supported in the os module.
 
 - Issue #23063: In the disutils' check command, fix parsing of reST with code or
